# otushomework

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  classDocumentHandler-members.html  classDocumentHandler.html  classExportToFile-members.html  classExportToFile.html  classExportToFile__inherit__graph.map  classExportToFile__inherit__graph.md5  classIExport-members.html  classIExport.html  classIExport__inherit__graph.map  classIExport__inherit__graph.md5  classIImport-members.html  classIImport.html  classIImport__inherit__graph.map  classIImport__inherit__graph.md5  classIViewer-members.html  classIViewer.html  classIViewer__inherit__graph.map  classIViewer__inherit__graph.md5  classImportFromFile-members.html  classImportFromFile.html  classImportFromFile__coll__graph.md5  classImportFromFile__inherit__graph.map  classWindowsViewer-members.html  classWindowsViewer.html  classWindowsViewer__coll__graph.md5  classWindowsViewer__inherit__graph.map  classes.html  classmodels_1_1IShape-members.html  classmodels_1_1IShape.html  classmodels_1_1IShape__inherit__graph.map  classmodels_1_1IShape__inherit__graph.md5  classmodels_1_1Line-members.html  classmodels_1_1Line.html  classmodels_1_1Line__coll__graph.map  classmodels_1_1Line__inherit__graph.md5  (+92 more)
.github/workflows/: release.yml
homework1/: CMakeLists.txt  info.h.in  lib.cpp  test.cpp
homework10/: CMakeLists.txt  main.cpp
homework10/async/: async.cpp
homework10/async/include/: block.h  writer.h
homework10/async/src/: block.cpp  chain.cpp  writer.cpp
homework11/: CMakeLists.txt  commands  main.cpp
homework11/include/: chain.hpp  server.hpp
homework11/src/: chain.cpp  server.cpp
homework12/: mapper.cpp  reducer.cpp  run_locally.sh
homework12/input/: unit_test.csv
homework13/: CMakeLists.txt  main.cpp
homework2/: CMakeLists.txt  ip_filter.cpp  ip_filter.h  main.cpp  test.cpp
homework3/: CMakeLists.txt  main.cpp
homework3/include/: allocator.h  container.h
homework3/src/: allocator.cpp
homework4/: CMakeLists.txt  main.cpp
homework5/: CMakeLists.txt  main.cpp
homework5/controllers/: document_handler.h  export_import.h
homework5/models/: document.h  simple.h
homework5/views/: viewer.h
homework6/: CMakeLists.txt  main.cpp
homework7/: CMakeLists.txt  main.cpp
homework7/include/: block.h  chain.h  writer.h
homework7/src/: block.cpp  chain.cpp  writer.cpp
homework8/: CMakeLists.txt  main.cpp
homework8/include/: builder.h  hash.h  scaner.h
homework8/src/: builder.cpp  hash.cpp  scaner.cpp
homework9/: CMakeLists.txt  example.cpp
homework9/async/: async.cpp
homework9/async/include/: block.h  chain.h
homework9/async/src/: block.cpp  chain.cpp  writer.cpp
homework9/include/: async.h
search/: all_1.js  all_11.js  all_12.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  (+4 more)
